[package]
name = "ldk-tutorial-node"
version = "0.1.0"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-background-processor = { path = "../../rust-lightning/background-processor" }
base64 = "0.13.0"
bitcoin = "0.26"
bitcoin-bech32 = "0.7"
bech32 = "0.7"
hex = "0.3"
lightning = { path = "../../rust-lightning/lightning" }
lightning-block-sync = { path = "../../rust-lightning/lightning-block-sync", features = ["rpc-client"] }
lightning-invoice = { git = "https://github.com/rust-bitcoin/rust-lightning-invoice", rev = "aa3a57b9dca5205fa25fa333a2db165d7e77b3b0" }
lightning-net-tokio = { path = "../../rust-lightning/lightning-net-tokio" }
lightning-persister = { path = "../../rust-lightning/lightning-persister" }
time = "0.2"
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1.0", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
